feat:refactor module auth (#3)
